# Convack

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ctest.yml
cmake/: FindGoogleTest.cmake
examples/: CMakeLists.txt  regular_polygons.cpp
include/: convex_polygon.h  convex_polygon.hpp  coordinate.hpp  point2.hpp  scene.h  scene.hpp  transformation.hpp
include/convack/: area.hpp  convex_polygon.hpp  coordinate.hpp  scene.hpp  transformation.hpp
include/convack/beam/: beam_search.hpp  packing_candidate.hpp
src/: convex_polygon.cpp  point2.cpp  scene.cpp  transformation.cpp
src/beam/: beam_search.cpp  packing_candidate.cpp
test/: convex_polygon.cpp  transformation.cpp
test/beam/: packing_candidate.cpp
